--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/reset.css">
+   <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>--- Trivia Game ---</title>
 </head>
@@ -17,7 +17,9 @@
     <button>Start</button>
 </div>
     <!--Need a Quiz Window-->
+
 <div class="quiz">
+    <span class = "timer">Time Remaining: </span>
     <span class = "questions">
         1. 
     </span>
