--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <!--Need a Start Window-->
     <!--Incorporate Bootstrap into CSS-->
 <div class="startwindow">
-    Totally Trivia!
-    <button>Start</button>
+   <h1></h1> Totally Trivia!</h1><br>
+   <h2>Space Edition</h2>
+    <button>Start!</button>
 </div>
     <!--Need a Quiz Window-->
 
