--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
               </div>
               <div class="col-sm" id="trivia-window">
                     <h1 id="trivia-text">Totally Trivia!</h1>
-                    <h2 id="trivia-text">Space Edition</h2>
-                    <p id="trivia-text">You will have 120 seconds to complete 6 trivia questions about space. Are you ready?!</p>
+                    <h2 id="trivia-text2">Space Edition</h2>
+                    <p id="trivia-text3">You will have 120 seconds to complete 6 trivia questions about space. Are you ready?!</p>
                     <button type="button" class="btn btn-primary" id="start-game-button">Start</button>
               </div>
               <div class="col-sm">
