--- a/index.html
+++ b/index.html
@@ -39,7 +39,49 @@
 <div class="quiz">
         <div id="display">00:00</div>
     <span class = "questions">
+        <div class="Question1"> </div>
+        <div class="option1a"> </div>
+        <div class="option1b"> </div>
+        <div class="option1c"> </div>
+        <div class="option1d"> </div>
+        <div class="option1e"> </div>
+            <br>
+        <div class="Question2"> </div>
+        <div class="option2a"> </div>
+        <div class="option2b"> </div>
+        <div class="option2c"> </div>
+        <div class="option2d"> </div>
+        <div class="option2e"> </div>
+            <br>
+        <div class="Question3"> </div>
+        <div class="option3a"> </div>
+        <div class="option3b"> </div>
+        <div class="option3c"> </div>
+        <div class="option3d"> </div>
+        <div class="option3e"> </div>
+            <br>
+        <div class="Question4"> </div>
+        <div class="option4a"> </div>
+        <div class="option4b"> </div>
+        <div class="option4c"> </div>
+        <div class="option4d"> </div>
+        <div class="option4e"> </div>
+            <br>
+        <div class="Question5"> </div>
+        <div class="option5a"> </div>
+        <div class="option5b"> </div>
+        <div class="option5c"> </div>
+        <div class="option5d"> </div>
+        <div class="option5e"> </div>
     </span>
+
+<div class = "Results">
+    <div class="correct"></div>
+        <br>
+    <div class="incorrect"></div>
+        <br>
+    <div class= "unanswered"></div>
+</div>
 </div>
     
 
