--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 
               </div>
                 <div class="col-sm" id="trivia-window">
-                <div id = "Timer"> </div>
+                <div class = "timeLeft" id = "timeLeft"> </div>
+
                         <h1 id="trivia-text">Totally Trivia!</h1>
                         <h2 id="trivia-text2">Space Edition</h2>
                         <p id="trivia-text3">You will have 120 seconds to complete 5 trivia questions about space. Are you ready?!</p>
